feat(add): eslint

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -15,5 +15,5 @@ html(lang='en')
     block content
 
     block footerscripts
-    script(type='text/javascript' src=(rFootScript) || '')
+    script(type='text/javascript' src=(mainjs) || '')
 
